<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- untitled strings -->

    <string name="app_name">Page 1</string>
    <string name="ek_img_content">ExportKit Image</string>
    <string name="welcome__string">WELCOME!</string>
    <string name="use_the_information_on_your_device_to_log_in_to_your_account_string">Use the information on your device to log in to your account</string>
    <string name="login_ek3_string">Login</string>
    <string name="login_ek4_string">Login</string>
    <string name="login_ek5_string">Login</string>
    <string name="login_ek6_string">Password</string>
    <string name="login_ek7_string">Password</string>
    <string name="take_the_hoc_device_in_your_hands_string">Take the HOC device in your hands</string>
    <string name="step_1_string">STEP 1</string>
    <string name="how_to_use_it__string">HOW TO USE IT?</string>
    <string name="login_ek8_string">Next step</string>
    <string name="skip_it_string">Skip it</string>
    <string name="point_the_device_at_the_sticker__thus_scanning_it_string">Point the device at the sticker, thus scanning it</string>
    <string name="step_2_string">STEP 2</string>
    <string name="how_to_use_it__ek1_string">HOW TO USE IT?</string>
    <string name="login_ek9_string">Next step</string>
    <string name="skip_it_ek1_string">Skip it</string>
    <string name="press_the_button_on_the_device_to_confirm_the_action_string">Press the button on the device to confirm the action</string>
    <string name="step_3_string">STEP 3</string>
    <string name="how_to_use_it__ek2_string">HOW TO USE IT?</string>
    <string name="login_ek10_string">Next step</string>
    <string name="skip_it_ek2_string">Skip it</string>
    <string name="done__the_hoc_device_will_execute_your_command_string">Done! The HOC device will execute your command</string>
    <string name="step_4_string">STEP 4</string>
    <string name="how_to_use_it__ek3_string">HOW TO USE IT?</string>
    <string name="login_ek11_string">Got it!</string>
    <string name="select_a_sticker_and_assign_it_a_function_string">Select a sticker and assign it a function</string>
    <string name="step_1_ek1_string">STEP 1</string>
    <string name="how_to_use_it__ek4_string">HOW TO USE IT?</string>
    <string name="login_ek12_string">Next step</string>
    <string name="skip_it_ek3_string">Skip it</string>
    <string name="let_the_elderly_person_know_which_sticker_is_needed_for_what_purpose_string">Let the elderly person know which sticker is needed for what purpose</string>
    <string name="step_2_ek1_string">STEP 2</string>
    <string name="how_to_use_it__ek5_string">HOW TO USE IT?</string>
    <string name="login_ek13_string">Next step</string>
    <string name="skip_it_ek4_string">Skip it</string>
    <string name="help_an_elderly_person_how_to_point_the_hoc_device_on_the_sticker_string">Help an elderly person how to point the HOC device on the sticker</string>
    <string name="step_3_ek1_string">STEP 3</string>
    <string name="how_to_use_it__ek6_string">HOW TO USE IT?</string>
    <string name="login_ek14_string">Next step</string>
    <string name="skip_it_ek5_string">Skip it</string>
    <string name="done__the_elderly_person_can_easily_use_the_hoc_device_string">Done! The elderly person can easily use the HOC device</string>
    <string name="step_4_ek1_string">STEP 4</string>
    <string name="how_to_use_it__ek7_string">HOW TO USE IT?</string>
    <string name="login_ek15_string">Got it!</string>
    <string name="which_one_are_you__string">WHICH ONE ARE YOU?</string>
    <string name="for_comfortable_interaction_with_the_application__specify_who_you_are_string">For comfortable interaction with the application, specify who you are</string>
    <string name="login_ek16_string">Continue</string>
    <string name="family_member_string">Family member</string>
    <string name="the_elderly_string">The elderly</string>
    <string name="the_hoc_string">the hoc</string>
    <string name="settings_ek3_string">SETTINGS</string>
    <string name="home_ek1_string">Home</string>
    <string name="settings_ek5_string">Settings</string>
    <string name="a_new_sticker_string">A new sticker</string>
    <string name="notifications_string">Notifications</string>
    <string name="language_string">Language</string>
    <string name="technical_support_string">Technical support</string>
    <string name="reverse_role_string">Reverse role</string>
    <string name="log_out_ek1_string">Log out</string>
    <string name="voice_of_the_hoc_string">Voice of the HOC</string>
    <string name="settings_ek9_string">SETTINGS</string>
    <string name="notifications_ek1_string">Notifications</string>
    <string name="language_ek1_string">Language</string>
    <string name="technical_support_ek1_string">Technical support</string>
    <string name="reverse_role_ek1_string">Reverse role</string>
    <string name="log_out_ek3_string">Log out</string>
    <string name="voice_of_the_hoc_ek1_string">Voice of the HOC</string>
    <string name="no_stickers_yet__do_you_want_to_add_a_sticker__string">No stickers yet. Do you want to add a sticker?</string>
    <string name="a_new_sticker_ek1_string">A new sticker</string>
    <string name="home_ek3_string">Home</string>
    <string name="settings_ek11_string">Settings</string>
    <string name="andre_s_call_string">Andreas call</string>
    <string name="call_the_subscriber__12345678912_string">Location: On Andreas photo</string>
    <string name="andre_s_call_ek1_string">Mail check</string>
    <string name="call_the_subscriber__12345678912_ek1_string">Location: On the notepad</string>
    <string name="andre_s_call_ek2_string">Weather forecast </string>
    <string name="search_sticker_string">Search sticker</string>
    <string name="home_ek5_string">Home</string>
    <string name="settings_ek13_string">Settings</string>
    <string name="a_new_sticker_ek2_string">A new sticker</string>
    <string name="home_ek7_string">Home</string>
    <string name="settings_ek15_string">Settings</string>
    <string name="a_new_sticker_ek3_string">A new sticker</string>
    <string name="login_ek17_string">Edit</string>
    <string name="andrea_s_call_string">ANDREAS CALL</string>
    <string name="location__on_the_notepad_string">Location: On the notepad</string>
    <string name="action__calling_andrea___123456789__string">Action: calling Andrea (+123456789)</string>
    <string name="login_ek18_string">Delete</string>
    <string name="a_new_sticker_ek7_string">A NEW STICKER</string>
    <string name="login_ek19_string">Next step</string>
    <string name="home_ek9_string">Home</string>
    <string name="settings_ek17_string">Settings</string>
    <string name="a_new_sticker_ek8_string">A new sticker</string>
    <string name="login_ek20_string">Name</string>
    <string name="login_ek21_string">Name</string>
    <string name="login_ek22_string">Sticker location (optional)</string>
    <string name="login_ek23_string">Sticker location</string>
    <string name="login_ek24_string">Action</string>
    <string name="login_ek25_string">Choose the action</string>
    <string name="editing_sticker_ek3_string">EDITING STICKER</string>
    <string name="sticker_image_string">Sticker image</string>
    <string name="home_ek11_string">Home</string>
    <string name="settings_ek19_string">Settings</string>
    <string name="a_new_sticker_ek9_string">A new sticker</string>
    <string name="click_here_to_change_the_image_string">Click here to change the image</string>
    <string name="login_ek26_string">Name</string>
    <string name="login_ek27_string">Andreas call</string>
    <string name="login_ek28_string">Sticker location (optional)</string>
    <string name="login_ek29_string">On the notepad</string>
    <string name="login_ek30_string">Action</string>
    <string name="login_ek31_string">Call</string>
    <string name="a_new_sticker_ek13_string">A NEW STICKER</string>
    <string name="login_ek32_string">Done!</string>
    <string name="select_a_sticker_image_string">Select a sticker image</string>
    <string name="home_ek13_string">Home</string>
    <string name="settings_ek21_string">Settings</string>
    <string name="a_new_sticker_ek14_string">A new sticker</string>
    <string name="a_new_sticker_ek18_string">A NEW STICKER</string>
    <string name="login_ek33_string">Done!</string>
    <string name="select_a_sticker_image_ek1_string">Select a sticker image</string>
    <string name="home_ek15_string">Home</string>
    <string name="settings_ek23_string">Settings</string>
    <string name="a_new_sticker_ek19_string">A new sticker</string>
    <string name="editing_sticker_image_ek3_string">EDITING STICKER IMAGE</string>
    <string name="login_ek34_string">Save</string>
    <string name="select_a_sticker_image_ek2_string">Select a sticker image</string>
    <string name="home_ek17_string">Home</string>
    <string name="settings_ek25_string">Settings</string>
    <string name="a_new_sticker_ek20_string">A new sticker</string>
    <string name="Name">Name</string>
    <string name="Action">Action</string>
    <string name="Sticker_location_optional">Stiker location (optional)</string>
    <string name="Sticker_location">Sticker Location</string>
    <string name="choose_action">Choose the action</string>
    <string name="text_home_string">Home</string>
    <string name="settings_string">Settings</string>
    <string name="text_no_stickers_string">No stickers yet. Do you want to add a sticker?</string>
    <string name="button_text_continue_string">Continue</string>
    <string name="text_role_family_member_string">Family member</string>
    <string name="text_role_the_elderly_string">The elderly</string>
    <string name="next_stop">Next stop</string>
    <string name="done">Done!</string>

</resources>