<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/_bg__login_ek2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:background="@drawable/_bg__login_ek2_shape" />

    <TextView
        android:id="@+id/welcome_"
        android:layout_width="179dp"
        android:layout_height="59dp"
        android:layout_marginLeft="108dp"
        android:layout_marginTop="80dp"
        android:text="@string/welcome__string"
        android:textColor="@color/welcome__color"
        android:textSize="30sp"
        android:gravity="center"/>

    <TextView
        android:id="@+id/text_from_welcome"
        android:layout_width="343dp"
        android:layout_height="59dp"
        android:layout_gravity="center_horizontal|center"
        android:layout_marginLeft="13dp"
        android:layout_marginTop="134dp"
        android:gravity="center"
        android:text="@string/use_the_information_on_your_device_to_log_in_to_your_account_string"
        android:textColor="@color/use_the_information_on_your_device_to_log_in_to_your_account_color"
        android:textSize="18sp" />


    <TextView
        android:id="@+id/text_login"
        android:layout_width="331dp"
        android:layout_height="32dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="200dp"
        android:text="@string/login_ek3_string"
        android:textColor="@color/welcome__color"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/login_field"
        android:layout_width="331dp"
        android:layout_height="36dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="240dp"
        android:hint="@string/login_ek3_string"
        android:textColor="@color/black"
        android:textSize="16sp" />


    <TextView
        android:id="@+id/text_password"
        android:layout_width="331dp"
        android:layout_height="32dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="290dp"
        android:text="@string/login_ek6_string"
        android:textColor="@color/welcome__color"
        android:textSize="16sp" />


    <EditText
        android:id="@+id/password_field"
        android:layout_width="331dp"
        android:layout_height="36dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="330dp"
        android:hint="@string/login_ek6_string"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="153dp"
        android:layout_height="32dp"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="600dp"
        android:background="@drawable/buttons_curts"
        android:gravity="center"
        android:text="@string/login_ek3_string"
        android:textColor="@color/white" />

</RelativeLayout>