<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/next_step_button"
        android:layout_width="153dp"
        android:layout_height="32dp"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="600dp"
        android:background="@drawable/buttons_curts"
        android:gravity="center"
        android:text="@string/next_stop"
        android:textColor="@color/white" />


    <RelativeLayout
        android:id="@+id/barra_tareas"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:layout_marginTop="620dp">>

        <Button
            android:id="@+id/settings_button"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginLeft="300dp"
            android:layout_marginTop="30dp"
            android:background="@android:color/transparent" />

        <Button
            android:id="@+id/add_stickers_button"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginLeft="165dp"
            android:layout_marginTop="30dp"
            android:background="@android:color/transparent" />

        <Button
            android:id="@+id/home_button"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="30dp"
            android:background="@android:color/transparent" />

        <RelativeLayout
            android:id="@+id/button_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="47dp"
            android:layout_marginTop="55dp">

            <ImageView
                android:id="@+id/home"
                android:layout_width="18dp"
                android:layout_height="20dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="0dp"
                android:contentDescription="home"
                android:src="@drawable/home" />

            <ImageView
                android:id="@+id/door"
                android:layout_width="6dp"
                android:layout_height="10dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:contentDescription="door"
                android:src="@drawable/door" />

            <TextView
                android:id="@+id/text_home"
                android:layout_width="49dp"
                android:layout_height="23dp"
                android:layout_gravity="center_horizontal|center"
                android:layout_marginLeft="-2dp"
                android:layout_marginTop="25dp"
                android:gravity="center"
                android:text="@string/text_home_string"
                android:textColor="@color/a_new_sticker_color"
                android:textSize="12sp" />

        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/button_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="310dp"
            android:layout_marginTop="55dp">

            <ImageView
                android:id="@+id/settings_vector"
                android:layout_width="18.04dp"
                android:layout_height="20dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="0dp"
                android:contentDescription="settings_vector"
                android:src="@drawable/settings_vector" />

            <ImageView
                android:id="@+id/middle_of_settings"
                android:layout_width="6dp"
                android:layout_height="6dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="7dp"
                android:contentDescription="middle_of_settings"
                android:src="@drawable/middle_of_settings" />

            <TextView
                android:id="@+id/settings"
                android:layout_width="49dp"
                android:layout_height="23dp"
                android:layout_gravity="center_horizontal|center"
                android:layout_marginLeft="-2dp"
                android:layout_marginTop="25dp"
                android:gravity="center"
                android:text="@string/settings_string"
                android:textColor="@color/a_new_sticker_color"
                android:textSize="12sp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/button_plus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="159dp"
            android:layout_marginTop="55dp">

            <RelativeLayout
                android:id="@+id/plus_circle_ek6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="0dp">

                <ImageView
                    android:id="@+id/vector_ek304"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="2dp"
                    android:layout_marginTop="2dp"
                    android:contentDescription="vector_ek304"
                    android:src="@drawable/vector_ek304" />

                <ImageView
                    android:id="@+id/vector_ek305"
                    android:layout_width="2dp"
                    android:layout_height="12dp"
                    android:layout_marginStart="11.5dp"
                    android:layout_marginTop="6dp"
                    android:contentDescription="vector_ek305"
                    android:src="@drawable/vector_ek305" />

                <ImageView
                    android:id="@+id/vector_ek306"
                    android:layout_width="12dp"
                    android:layout_height="2dp"
                    android:layout_marginStart="6.5dp"
                    android:layout_marginTop="11dp"
                    android:contentDescription="vector_ek306"
                    android:src="@drawable/vector_ek306" />

            </RelativeLayout>

            <TextView
                android:id="@+id/a_new_sticker"
                android:layout_width="74dp"
                android:layout_height="23dp"
                android:layout_gravity="center_horizontal|center"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="25dp"
                android:gravity="center"
                android:text="@string/a_new_sticker_string"
                android:textColor="@color/use_the_information_on_your_device_to_log_in_to_your_account_color"
                android:textSize="12sp" />

        </RelativeLayout>

    </RelativeLayout>

    <TextView
        android:id="@+id/a_new_sticker_text"
        android:layout_width="223dp"
        android:layout_height="59dp"
        android:layout_gravity="center_horizontal|center"
        android:layout_marginLeft="74dp"
        android:layout_marginTop="80dp"
        android:gravity="center"
        android:text="@string/a_new_sticker_ek18_string"
        android:textColor="@color/use_the_information_on_your_device_to_log_in_to_your_account_color"
        android:textSize="30sp" />

    <ImageView
        android:id="@+id/back_image"
        android:layout_width="10dp"
        android:layout_height="20dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="25dp"
        android:contentDescription="vector_ek299"
        android:src="@drawable/vector_ek299" />

    <Button
        android:id="@+id/back_button"
        android:layout_width="20dp"
        android:layout_height="30dp"
        android:layout_marginStart="9dp"
        android:layout_marginTop="20dp"
        android:background="@android:color/transparent" />

    <TextView
        android:id="@+id/text_Name"
        android:layout_width="331dp"
        android:layout_height="32dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="200dp"
        android:text="@string/Name"
        android:textColor="@color/welcome__color"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/name_field"
        android:layout_width="331dp"
        android:layout_height="36dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="240dp"
        android:hint="@string/Name"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/text_action"
        android:layout_width="331dp"
        android:layout_height="32dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="280dp"
        android:text="@string/Action"
        android:textColor="@color/welcome__color"
        android:textSize="16sp" />

    <Spinner
        android:id="@+id/action_spinner"
        android:layout_width="331dp"
        android:layout_height="36dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="315dp"
        android:background="@drawable/borde_rectangulo"
        android:gravity="left"
        android:hint="@string/choose_action"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/text_location_sticker"
        android:layout_width="331dp"
        android:layout_height="32dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="360dp"
        android:text="@string/Sticker_location_optional"
        android:textColor="@color/welcome__color"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/location_sticker_field"
        android:layout_width="331dp"
        android:layout_height="36dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="395dp"
        android:hint="@string/Sticker_location"
        android:textColor="@color/black"
        android:textSize="16sp" />

</RelativeLayout>